Migrating to Maven and Java9